<resources>
    <string name="app_name">Meemeow Airlines</string>
    <string name="login_activity_title">Login</string>
    <string name="profile_activity_title">Profile</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="termsandconditions">I agree to the terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me</string>
    <string name="server_client_id">17870897958-cp603o1rqbk7gutoqa2p77jq38fb2pjo.apps.googleusercontent.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="confirm_age">Are you sure your age is %1$s?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="enter_dob">mm/dd/yyyy</string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Enter gender</string>
    <string name="nationality">Nationality</string>
    <string name="enter_nationality">eg: PHL</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">**** - *** - ****</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="enter_place_of_birth">eg: Metro Manila </string>
    <string name="passport_number">Passport Number</string>
    <string name="enter_passport_number">eg: TVN12346X01MN2</string>
    <string name="account_info">Account Information:</string>
    <string name="emergency_contact_number">Emergency Contact</string>
    <string name="enter_emergency_contact_number">**** - *** - ****</string>
    <string name="book_flight">Book Flight</string>
    <string name="checkin">CheckIn</string>
    <string name="manage_booking">Manage Booking</string>
    <string name="more">More</string>
</resources>
