<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffef" >

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeViewTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/composeViewTopBar"
        android:padding="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Profile Picture and Edit Profile Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20sp"
                android:gravity="start">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="173dp"
                    android:layout_height="159dp"
                    android:padding="8dp"
                    android:src="@drawable/catt_remove"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="121dp"
                    android:layout_height="42dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/button"
                    android:text="@string/edit_profile" />
            </LinearLayout>

            <!-- Account Information and fields with background -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_text">

                <TextView
                    android:id="@+id/accountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:text="@string/account_info"
                    android:textStyle="bold" />

                <!-- First Name and Nationality -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/firstNameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textFontWeight="550"
                            android:textColor="#000000"
                            android:text="@string/first_name" />

                        <TextView
                            android:id="@+id/firstNameTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="4dp"
                            android:paddingStart="6dp"
                            android:textSize="12sp"
                            android:textColor="#000000"
                            android:text="@string/first_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nationalityTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textColor="#000000"
                            android:textFontWeight="550"
                            android:text="@string/nationality" />

                        <EditText
                            android:id="@+id/nationalityEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:textSize="12sp"
                            android:paddingStart="6dp"
                            android:textColor="#000000"
                            android:hint="@string/enter_nationality" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Last Name and Phone Number -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lastNameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textColor="#000000"
                            android:textFontWeight="550"
                            android:textStyle="italic"
                            android:text="@string/last_name" />

                        <TextView
                            android:id="@+id/lastNameTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="4dp"
                            android:paddingStart="6dp"
                            android:textSize="12sp"
                            android:textColor="#000000"
                            android:text="@string/last_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/phoneNumberTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textColor="#000000"
                            android:textFontWeight="550"
                            android:text="@string/phone_number" />

                        <EditText
                            android:id="@+id/phoneNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:textSize="12sp"
                            android:paddingStart="6dp"
                            android:textColor="#000000"
                            android:hint="@string/enter_phone_number" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Email and Place of Birth -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/emailText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:textFontWeight="550"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textColor="#000000"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/emailTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="4dp"
                            android:paddingStart="6dp"
                            android:textSize="12sp"
                            android:textColor="#000000"
                            android:textStyle="italic"
                            android:text="@string/email" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/placeOfBirthTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textColor="#000000"
                            android:textFontWeight="550"
                            android:text="@string/place_of_birth"
                            tools:ignore="RtlSymmetry" />

                        <EditText
                            android:id="@+id/placeOfBirthEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:paddingStart="6dp"
                            android:textSize="12sp"
                            android:textColor="#000000"
                            android:hint="@string/enter_place_of_birth" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Age and Passport Number -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/genderTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textColor="#000000"
                            android:textFontWeight="550"
                            android:text="@string/gender" />

                        <EditText
                            android:id="@+id/genderEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_gender"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:paddingStart="6dp"
                            android:textColor="#000000"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/passportNumberTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textFontWeight="550"
                            android:textColor="#000000"
                            android:text="@string/passport_number" />

                        <EditText
                            android:id="@+id/passportNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:textSize="12sp"
                            android:paddingStart="6dp"
                            android:textColor="#000000"
                            android:hint="@string/enter_passport_number" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Gender and Emergency Contact -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dateOfBirthTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textFontWeight="550"
                            android:textColor="#000000"
                            android:text="@string/dob" />

                        <TextView
                            android:id="@+id/dateOfBirthEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:paddingStart="6dp"
                            android:textSize="12sp"
                            android:textColor="#000000"
                            android:hint="@string/enter_dob" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/emergencyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:textFontWeight="550"
                            android:paddingTop="6dp"
                            android:textStyle="italic"
                            android:textColor="#000000"
                            android:text="@string/emergency_contact_number" />

                        <EditText
                            android:id="@+id/emergencyEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="3dp"
                            android:textSize="12sp"
                            android:paddingStart="6dp"
                            android:textColor="#000000"
                            android:hint="@string/enter_emergency_contact_number" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Buttons -->
            <Button
                android:id="@+id/logoutButton"
                android:layout_width="98dp"
                android:layout_height="42dp"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:background="@drawable/button"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
